--- a/css my site/css/styles.css
+++ b/css my site/css/styles.css
@@ -1,23 +1,41 @@
 body{
   margin: 0;
+  text-align: center;
+  font-family: 'merriweather',serif;
 }
 
 h1{
   margin-top: 0;
+  font-family: 'sacramento', cursive;
 }
-
+h2{
+  font-family: 'montserrat', sans-serif;
+}
+h3{
+  font-family: 'montserrat', sans-serif;
+}
 .top-container{
   background-color: #e4f9f5;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container{
-  background-color: blue;
-  height: 200px;
-  width: 200px;
+
 }
 
 .bottom-container{
-  background-color: red;
-  height: 200px;
-  width: 200px;
+  
+}
+
+.bottomcloud{
+  position: absolute;
+  bottom: 300px;
+  left: 300px;
+}
+
+.topcloud{
+  position: absolute;
+  top: 50px;
+  right: 300px;
 }
