--- a/css my site/css/styles.css
+++ b/css my site/css/styles.css
@@ -1,19 +1,30 @@
 body{
   margin: 0;
   text-align: center;
-  font-family: 'merriweather',serif;
+  font-family: 'Merriweather',serif;
 }
 
 h1{
-  font-size: 562%;
-  margin-top: 0;
-  font-family: 'sacramento', cursive;
+  font-size: 5.62rem;
+  line-height: 2;
+  margin: 50px auto 0 auto;
+  font-family: 'Sacramento', cursive;
+  color: #66bfbf;
+  line-height:
 }
 h2{
-  font-family: 'montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #66bfbf;
+  font-weight: normal;
 }
 h3{
-  font-family: 'montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #11999e;
+}
+span{
+  font-style: italic;
 }
 .top-container{
   background-color: #e4f9f5;
